фикс обновления и удаления и вывод с фильтрацией
